@@ -5,7 +5,6 @@ import com.faforever.neroxis.map.SymmetryType;
 import com.faforever.neroxis.util.functional.ToIntBiIntFunction;
 import com.faforever.neroxis.util.functional.TriIntConsumer;
 import com.faforever.neroxis.util.vector.Vector2;
-import org.jspecify.annotations.Nullable;
 
 import java.awt.image.BufferedImage;
 import java.awt.image.DataBuffer;
@@ -18,7 +17,7 @@ import java.util.Map;
 
 @SuppressWarnings({"UnusedReturnValue", "unused"})
 public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
-    private int[][] mask = new int[0][0];
+    private int[][] mask;
 
     public IntegerMask(int size, Long seed, SymmetrySettings symmetrySettings) {
         this(size, seed, symmetrySettings, null);
@@ -32,7 +31,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
      * @param symmetrySettings symmetrySettings to enforce on the mask
      * @param name             name of the mask
      */
-    public IntegerMask(int size, @Nullable Long seed, SymmetrySettings symmetrySettings, @Nullable String name) {
+    public IntegerMask(int size, Long seed, SymmetrySettings symmetrySettings, String name) {
         super(size, seed, symmetrySettings, name);
     }
 
@@ -40,7 +39,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         this(other, null);
     }
 
-    IntegerMask(IntegerMask other, @Nullable String name) {
+    IntegerMask(IntegerMask other, String name) {
         super(other, name);
     }
 
@@ -48,7 +47,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         this(other, low, high, null);
     }
 
-    public IntegerMask(BooleanMask other, int low, int high, @Nullable String name) {
+    public IntegerMask(BooleanMask other, int low, int high, String name) {
         this(other.getSize(), other.getNextSeed(), other.getSymmetrySettings(), name);
         enqueue(dependencies -> {
             BooleanMask source = (BooleanMask) dependencies.getFirst();
@@ -56,15 +55,14 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         }, other);
     }
 
-    public IntegerMask(BufferedImage sourceImage, @Nullable Long seed, SymmetrySettings symmetrySettings,
-                       @Nullable String name) {
+    public IntegerMask(BufferedImage sourceImage, Long seed, SymmetrySettings symmetrySettings, String name) {
         this(sourceImage.getHeight(), seed, symmetrySettings, name);
         DataBuffer imageBuffer = sourceImage.getRaster().getDataBuffer();
         int size = getSize();
         apply((x, y) -> setPrimitive(x, y, imageBuffer.getElem(x + y * size)));
     }
 
-    public IntegerMask(BufferedImage sourceImage, @Nullable Long seed, SymmetrySettings symmetrySettings) {
+    public IntegerMask(BufferedImage sourceImage, Long seed, SymmetrySettings symmetrySettings) {
         this(sourceImage, seed, symmetrySettings, null);
     }
 
@@ -111,7 +109,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     public IntegerMask blur(int radius, BooleanMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask limiter = (BooleanMask) dependencies.getFirst();
+            BooleanMask limiter = (BooleanMask) dependencies.get(0);
             int[][] innerCount = getInnerCount();
             apply((x, y) -> {
                 if (limiter.get(x, y)) {
@@ -123,7 +121,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
 
     @Override
     protected IntegerMask copyFrom(IntegerMask other) {
-        return enqueue(dependencies -> fill(((IntegerMask) dependencies.getFirst()).mask), other);
+        return enqueue(dependencies -> fill(((IntegerMask) dependencies.get(0)).mask), other);
     }
 
     @Override
@@ -236,15 +234,15 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         return apply((x, y) -> dividePrimitiveAt(x, y, valueFunction.apply(x, y)));
     }
 
-    private void addPrimitiveAt(int x, int y, int value) {
+    private void addPrimitiveAt(int x, int y, float value) {
         mask[x][y] += value;
     }
 
-    private void subtractPrimitiveAt(int x, int y, int value) {
+    private void subtractPrimitiveAt(int x, int y, float value) {
         mask[x][y] -= value;
     }
 
-    private void multiplyPrimitiveAt(int x, int y, int value) {
+    private void multiplyPrimitiveAt(int x, int y, float value) {
         mask[x][y] *= value;
     }
 
@@ -256,7 +254,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         return image;
     }
 
-    private void dividePrimitiveAt(int x, int y, int value) {
+    private void dividePrimitiveAt(int x, int y, float value) {
         mask[x][y] /= value;
     }
 
@@ -276,7 +274,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     public IntegerMask add(IntegerMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            IntegerMask source = (IntegerMask) dependencies.getFirst();
+            IntegerMask source = (IntegerMask) dependencies.get(0);
             apply((x, y) -> mask[x][y] += source.mask[x][y]);
         }, other);
     }
@@ -291,7 +289,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         assertCompatibleMask(other);
         int val = value;
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.getFirst();
+            BooleanMask source = (BooleanMask) dependencies.get(0);
             apply((x, y) -> {
                 if (source.getPrimitive(x, y)) {
                     addPrimitiveAt(x, y, val);
@@ -317,7 +315,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     @Override
     public IntegerMask addWithOffset(IntegerMask other, int xOffset, int yOffset, boolean center, boolean wrapEdges) {
         return enqueue(dependencies -> {
-            IntegerMask source = (IntegerMask) dependencies.getFirst();
+            IntegerMask source = (IntegerMask) dependencies.get(0);
             applyWithOffset(source, (TriIntConsumer) this::addPrimitiveAt, xOffset, yOffset, center, wrapEdges);
         }, other);
     }
@@ -338,7 +336,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     public IntegerMask subtract(IntegerMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            IntegerMask source = (IntegerMask) dependencies.getFirst();
+            IntegerMask source = (IntegerMask) dependencies.get(0);
             apply((x, y) -> mask[x][y] -= source.mask[x][y]);
         }, other);
     }
@@ -348,7 +346,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         assertCompatibleMask(other);
         int val = values;
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.getFirst();
+            BooleanMask source = (BooleanMask) dependencies.get(0);
             apply((x, y) -> {
                 if (source.getPrimitive(x, y)) {
                     subtractPrimitiveAt(x, y, val);
@@ -375,7 +373,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     public IntegerMask subtractWithOffset(IntegerMask other, int xOffset, int yOffset, boolean center,
                                           boolean wrapEdges) {
         return enqueue(dependencies -> {
-            IntegerMask source = (IntegerMask) dependencies.getFirst();
+            IntegerMask source = (IntegerMask) dependencies.get(0);
             applyWithOffset(source, (TriIntConsumer) this::subtractPrimitiveAt, xOffset, yOffset, center, wrapEdges);
         }, other);
     }
@@ -384,7 +382,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     public IntegerMask multiply(IntegerMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            IntegerMask source = (IntegerMask) dependencies.getFirst();
+            IntegerMask source = (IntegerMask) dependencies.get(0);
             apply((x, y) -> mask[x][y] *= source.mask[x][y]);
         }, other);
     }
@@ -399,7 +397,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         assertCompatibleMask(other);
         int val = value;
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.getFirst();
+            BooleanMask source = (BooleanMask) dependencies.get(0);
             apply((x, y) -> {
                 if (source.getPrimitive(x, y)) {
                     multiplyPrimitiveAt(x, y, val);
@@ -426,7 +424,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     public IntegerMask multiplyWithOffset(IntegerMask other, int xOffset, int yOffset, boolean center,
                                           boolean wrapEdges) {
         return enqueue(dependencies -> {
-            IntegerMask source = (IntegerMask) dependencies.getFirst();
+            IntegerMask source = (IntegerMask) dependencies.get(0);
             applyWithOffset(source, (TriIntConsumer) this::multiplyPrimitiveAt, xOffset, yOffset, center, wrapEdges);
         }, other);
     }
@@ -435,7 +433,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     public IntegerMask divide(IntegerMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            IntegerMask source = (IntegerMask) dependencies.getFirst();
+            IntegerMask source = (IntegerMask) dependencies.get(0);
             apply((x, y) -> mask[x][y] /= source.mask[x][y]);
         }, other);
     }
@@ -450,7 +448,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
         assertCompatibleMask(other);
         int val = value;
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.getFirst();
+            BooleanMask source = (BooleanMask) dependencies.get(0);
             apply((x, y) -> {
                 if (source.getPrimitive(x, y)) {
                     dividePrimitiveAt(x, y, val);
@@ -477,7 +475,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     public IntegerMask divideWithOffset(IntegerMask other, int xOffset, int yOffset, boolean center,
                                         boolean wrapEdges) {
         return enqueue(dependencies -> {
-            IntegerMask source = (IntegerMask) dependencies.getFirst();
+            IntegerMask source = (IntegerMask) dependencies.get(0);
             applyWithOffset(source, (TriIntConsumer) this::dividePrimitiveAt, xOffset, yOffset, center, wrapEdges);
         }, other);
     }
